# avrkit

./: .gitignore  CMakeLists.txt  README.md  setup.py  toolchain_avrgcc.cmake  upload.py
example/: CMakeLists.txt
example/blink/: CMakeLists.txt  main.c
include/: avrkit.h
include/avrkit/: gpio.h  i2c.h  isr.h  timer.h  uart.h  wdt.h
include/avrkit/platform/: atmega328p.h  common.h
src/: avrkit_gpio.c  avrkit_isr.c  avrkit_platform.c  avrkit_timer.c  avrkit_wdt.c
